--- a/Sass/_generels.scss
+++ b/Sass/_generels.scss
@@ -13,7 +13,7 @@ a {
 }
 
 .container {
-  max-width: 1440px;
+  max-width: 1313px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -24,5 +24,6 @@ button{
 
 
 body{
+  color: $text-color;
   background-color: $bacground-color;
 }
