--- a/Sass/_mixin.scss
+++ b/Sass/_mixin.scss
@@ -8,3 +8,10 @@
     font-size: $fs;
     font-weight: $fw;
 }
+@mixin btn ($p , $br , $b , $bg , $c){
+    padding: $p;
+    border-radius: $br;
+    border: $b;
+    background-color: $bg;
+    color: $c;
+}
