--- a/css/style.css
+++ b/css/style.css
@@ -24,4 +24,75 @@ button {
 
 body {
   background-color: #1d1d1d;
+}
+
+.purr__list {
+  margin-left: 65px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.purr__item {
+  padding-left: 40px;
+  padding-top: 90px;
+}
+
+.purr-item__text {
+  color: black;
+  letter-spacing: 3px;
+  font-size: 12px;
+  font-weight: 700;
+  width: 200px;
+  padding-bottom: 19px;
+}
+
+.purr-item__title {
+  color: white;
+  font-size: 36px;
+  font-weight: 700;
+  padding-bottom: 15px;
+}
+
+.purr-item__bottom-text {
+  color: white;
+  font-size: 14px;
+  font-weight: 400;
+  width: 190px;
+  padding-bottom: 35px;
+}
+
+.purr-pink {
+  background-color: #c75e90;
+  width: 315px;
+  height: 480px;
+  border-radius: 40px;
+}
+
+.purr-item__btn {
+  background-color: #c75e90;
+  padding: 15px 80px;
+  border-radius: 40px;
+  border: none;
+  background-color: #8E345F;
+  color: white;
+}
+
+.grooming-item__title {
+  color: white;
+  font-size: 24px;
+  font-weight: 700;
+  padding-top: 30px;
+  padding-bottom: 10px;
+}
+
+.purr-black {
+  padding-left: 50px;
+  padding-top: 50px;
+}
+
+.grooming-item__text {
+  color: white;
+  width: 200px;
+  font-size: 14px;
+  font-weight: 400;
 }/*# sourceMappingURL=style.css.map */
