--- a/Sass/_generels.scss
+++ b/Sass/_generels.scss
@@ -13,16 +13,18 @@ a {
 }
 
 .container {
-  max-width: 1440px;
+  max-width: 1313px;
   margin: 0 auto;
   padding: 0 20px;
 }
 
-button{
+button {
   cursor: pointer;
 }
 
-
-body{
+body {
   background-color: $bacground-color;
+}
+body {
+  font-family: "Poppins";
 }
