--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,70 @@
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins-Bold.woff2") format("woff2"), url("Poppins-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins-Black.woff2") format("woff2"), url("Poppins-Black.woff") format("woff");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins-ExtraLight.woff2") format("woff2"), url("Poppins-ExtraLight.woff") format("woff");
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins-ExtraBold.woff2") format("woff2"), url("Poppins-ExtraBold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins-Medium.woff2") format("woff2"), url("Poppins-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins-Light.woff2") format("woff2"), url("Poppins-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins-Thin.woff2") format("woff2"), url("Poppins-Thin.woff") format("woff");
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins-Regular.woff2") format("woff2"), url("Poppins-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("Poppins-SemiBold.woff2") format("woff2"), url("Poppins-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+body {
+  font-family: "Poppins";
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -13,7 +80,7 @@ a {
 }
 
 .container {
-  max-width: 1440px;
+  max-width: 1313px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -24,4 +91,360 @@ button {
 
 body {
   background-color: #1d1d1d;
+}
+
+body {
+  font-family: "Poppins";
+}
+
+.header_wrapper_left-box {
+  width: 110px;
+  height: 45px;
+  border-radius: 220px;
+  background-color: white;
+  border: 1px solid white;
+}
+
+.header_wrapper_left_box-sun {
+  padding-right: 8px;
+  padding-top: 5px;
+}
+
+.header_wrapper_left_box-fist {
+  width: 60px;
+  height: 45px;
+  border-radius: 40px;
+  background-color: #c75e90;
+}
+
+.header_wrapper_left-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header_wrapper_left_box-fist {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header_wrapper_center-link {
+  color: white;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 700;
+}
+
+.header_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 0px;
+  justify-content: space-between;
+}
+
+.header_wrapper-center {
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 70px;
+}
+
+.block-btn {
+  padding: 14px 48px;
+  background-color: #c75e90;
+  border-radius: 220px;
+  color: white;
+  font-weight: 700;
+  font-size: 12px;
+  border: none;
+}
+
+.header_wrapper-left {
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 12px;
+}
+
+.header {
+  margin-top: 40px;
+}
+
+.stars_wrapper-item {
+  width: 500px;
+  height: 600px;
+}
+
+.Stars {
+  margin-top: 129px;
+}
+
+.stars_wrapper_item-title {
+  font-size: 14px;
+  color: #696969;
+  font-weight: 700;
+  letter-spacing: 1px;
+  line-height: 21px;
+  padding-bottom: 28px;
+}
+
+.stars_wrapper_item-big {
+  font-size: 46px;
+  font-weight: 700;
+  color: white;
+  line-height: 69px;
+  padding-bottom: 28px;
+}
+
+.stars_wrapepr_item-mini {
+  font-size: 14px;
+  font-weight: 400;
+  color: white;
+  line-height: 21px;
+  padding-bottom: 40px;
+}
+
+.start_box-cat {
+  width: 337px;
+  height: 122px;
+  border-radius: 20px;
+  background-image: url(/Photos/cat.png);
+  background-repeat: no-repeat;
+  position: relative;
+  margin-top: 80px;
+}
+
+.start_box_cat-title {
+  font-size: 12px;
+  line-height: 18px;
+  color: white;
+  font-weight: 700;
+  letter-spacing: 3px;
+}
+
+.start_box_cat-mini {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  color: white;
+}
+
+.start_box_cat-text {
+  padding-top: 65px;
+  padding-left: 20px;
+}
+
+.start_box_cat-media {
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+  background-color: #c75e90;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 0px;
+  justify-content: center;
+  left: 305px;
+  bottom: 30px;
+  position: absolute;
+}
+
+.stars_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 0px;
+  justify-content: space-between;
+}
+
+.stars_wrapper-left {
+  position: relative;
+}
+
+.start_box_left-fisrt {
+  position: absolute;
+  top: 80px;
+  left: -60px;
+}
+
+.start_box_left-second {
+  position: absolute;
+  top: 300px;
+  left: -60px;
+}
+
+.start_box_left-thirs {
+  position: absolute;
+  bottom: -50px;
+  left: 20px;
+}
+
+.start_box_left-four {
+  position: absolute;
+  bottom: -50px;
+  left: 250px;
+}
+
+.stars_wrapper_bottom-box {
+  width: 1313px;
+  height: 168px;
+  background-color: #c75e90;
+  border-radius: 40px;
+  margin-top: 82px;
+}
+
+.stars_wrapepr_bottom-location {
+  width: 78px;
+  height: 78px;
+  border-radius: 50%;
+  background-color: #8e345f;
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 0px;
+  justify-content: center;
+}
+
+.start_wrapepr_bottom-text {
+  font-size: 20px;
+  font-weight: 700;
+  color: white;
+  line-height: 30px;
+}
+
+.stars_wrapepr_bottom-first {
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 12px;
+  padding-top: 43px;
+  padding-left: 23px;
+  padding-bottom: 40px;
+}
+
+.stars_wrapper_bottom-second {
+  width: 822px;
+  height: 168px;
+  background-color: #8e345f;
+  border-radius: 100px 40px 40px 100px;
+}
+
+.stars_wrapper_bottom-box {
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 0x;
+  justify-content: space-between;
+}
+
+.stars_wrapper_bottom_second-box {
+  width: 78px;
+  height: 78px;
+  border-radius: 50%;
+  background-color: #c75e90;
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 0px;
+  justify-content: center;
+}
+
+.stars_wrapper_bottom_second-text {
+  font-size: 20px;
+  line-height: 30px;
+  color: wheat;
+  font-weight: 700;
+}
+
+.stars_wrapper_bottom_second_first-box {
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 27px;
+}
+
+.stars_wrapper_bottom-second {
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 83px;
+  justify-content: center;
+}
+
+.Rooms {
+  padding-top: 79px;
+}
+
+.rooms_wrapper_item-title {
+  font-size: 12px;
+  color: #696969;
+  font-weight: 700;
+  list-style: 16px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  padding-bottom: 28px;
+}
+
+.rooms_wrapper_item-big {
+  font-size: 36px;
+  line-height: 54px;
+  color: white;
+  font-weight: 700;
+  padding-bottom: 45px;
+}
+
+.rooms_wrapper_item-left_big-img {
+  min-width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #c75e90;
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 0px;
+  justify-content: center;
+}
+
+.rooms_wrapper {
+  display: flex;
+  gap: 103px;
+}
+
+.rooms_wrapper_item-left {
+  padding-top: 10px;
+}
+
+.rooms_wrapepr_item-title {
+  font-size: 20px;
+  color: white;
+  line-height: 30px;
+  font-weight: 700;
+  padding-bottom: 19px;
+}
+
+.rooms_wrapper_item-mini {
+  font-size: 14px;
+  font-weight: 300;
+  color: white;
+  line-height: 21px;
+}
+
+.rooms_wrapepr_item_left-big {
+  display: flex;
+  align-items: center;
+  justify-content: flex;
+  gap: 36px;
+  align-items: flex-start;
+}
+
+.span_text {
+  font-size: 19px;
+}
+
+.span_first {
+  padding-top: 66px;
+  padding-bottom: 60px;
 }/*# sourceMappingURL=style.css.map */
