--- a/Sass/blocks/_purr.scss
+++ b/Sass/blocks/_purr.scss
@@ -50,3 +50,30 @@
     width: 200px;
     @include font (14px , 400)
 }
+.img__list{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 65px;
+    gap: 20px;
+}
+.radius-icon{
+    width: 50px;
+    height: 50px;
+}
+.radius{
+border-radius: 50%;
+background-color: $btn-color;
+width: 70px;
+height: 70px;
+padding-left: 10px;
+padding-top: 10px;
+position: absolute;
+top: 200px;
+left: 105px;
+}
+.img__item{
+    position: relative;
+}
+.img__list{
+    margin-left: 100px;
+}
