--- a/css/style.css
+++ b/css/style.css
@@ -95,4 +95,36 @@ body {
   width: 200px;
   font-size: 14px;
   font-weight: 400;
+}
+
+.img__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 65px;
+  gap: 20px;
+}
+
+.radius-icon {
+  width: 50px;
+  height: 50px;
+}
+
+.radius {
+  border-radius: 50%;
+  background-color: #c75e90;
+  width: 70px;
+  height: 70px;
+  padding-left: 10px;
+  padding-top: 10px;
+  position: absolute;
+  top: 200px;
+  left: 105px;
+}
+
+.img__item {
+  position: relative;
+}
+
+.img__list {
+  margin-left: 100px;
 }/*# sourceMappingURL=style.css.map */
