--- a/css/style.css
+++ b/css/style.css
@@ -127,4 +127,244 @@ body {
 
 .img__list {
   margin-left: 100px;
+}
+
+.pricing__header {
+  color: white;
+  text-align: center;
+  margin-top: 70px;
+}
+
+.pricing-header-top__text {
+  color: #696969;
+  letter-spacing: 2px;
+  font-weight: 700;
+  font-size: 12px;
+}
+
+.pricing-header-title {
+  font-size: 40px;
+  font-weight: 700;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.pricing-header-bottom__text {
+  width: 550px;
+  font-size: 14px;
+  font-weight: 400;
+  padding-bottom: 75px;
+  margin-left: 430px;
+}
+
+.pricing__item {
+  color: white;
+  width: 440px;
+  background-color: #161616;
+  border-radius: 40px;
+  height: 580px;
+  padding: 45px 85px 50px 65px;
+  z-index: 1;
+}
+
+.pricing-item__header {
+  color: #c75e90;
+  display: flex;
+  align-items: center;
+  gap: 140px;
+  font-weight: 700;
+  padding-bottom: 25px;
+}
+
+.pricing-item__price {
+  display: flex;
+  align-items: end;
+  gap: 10px;
+  padding-bottom: 50px;
+}
+
+.pricing-big__price {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.pricing-main-item {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
+.pricing-bottom__btn {
+  padding: 15px 80px;
+  border-radius: 40px;
+  border: none;
+  background-color: #c75e90;
+  color: white;
+  margin-top: 40px;
+}
+
+.pink {
+  background-color: #c75e90;
+  width: 440px;
+  height: 650px;
+  z-index: 2;
+}
+
+.pink__text {
+  color: white;
+  font-size: 14px;
+}
+
+.pink__btn {
+  background-color: #8E345F;
+}
+
+.black {
+  padding: 45px 45px 50px 100px;
+  z-index: 1;
+}
+
+.pricing__list {
+  display: flex;
+}
+
+.celebrate-header__text {
+  width: 600px;
+  margin-left: 465px;
+  padding-bottom: 85px;
+}
+
+.celebrate__item {
+  padding: 40px 40px 45px 50px;
+  width: 430px;
+  height: 450px;
+  color: white;
+  background-color: #161616;
+  border-radius: 40px;
+}
+
+.celebrate__text {
+  width: 275px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+
+.celebrate__info {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.celebrate-info__img {
+  border: solid 5px #c75e90;
+  border-radius: 50%;
+}
+
+.celebrate__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-left: 100px;
+}
+
+.info__wrapper {
+  background-color: #161616;
+  padding-top: 100px;
+  width: 1400px;
+  margin-left: 60px;
+  margin-top: 80px;
+}
+
+.info-top__text {
+  text-align: center;
+}
+
+.info-top {
+  color: #696969;
+  letter-spacing: 2px;
+  padding-bottom: 25px;
+}
+
+.info__title {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.info__texts {
+  width: 800px;
+  margin-left: 300px;
+  padding-top: 20px;
+  padding-bottom: 70px;
+}
+
+.info-small {
+  border-radius: 40px;
+  width: 530px;
+  height: 80px;
+  border: 2px solid white;
+  padding-top: 10px;
+  padding-left: 40px;
+}
+
+.info-top-in {
+  padding-bottom: 10px;
+}
+
+.small-info {
+  display: flex;
+  margin-left: 150px;
+  gap: 20px;
+}
+
+.big-info {
+  border-radius: 40px;
+  width: 1090px;
+  height: 80px;
+  border: 2px solid white;
+  padding-top: 10px;
+  padding-left: 40px;
+  margin-left: 150px;
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 10px;
+}
+
+.m {
+  margin-top: 50px;
+}
+
+.info-btn {
+  margin-left: 600px;
+  padding: 20px 60px;
+  border-radius: 40px;
+  border: none;
+  background-color: #c75e90;
+  color: white;
+  margin-top: 60px;
+  margin-bottom: 90px;
+}
+
+.Paradise {
+  width: 230px;
+}
+
+.big-info-icon1 {
+  width: 55px;
+  height: 55px;
+  background-color: #c75e90;
+  border-radius: 50%;
+}
+
+.small-info {
+  color: white;
+}
+
+.big-info {
+  color: white;
+}
+
+.info-top__text {
+  color: white;
 }/*# sourceMappingURL=style.css.map */
